# WitcherTrack

./: .gitignore  README.md  build.py
data/: TW3_alchemylist.csv  TW3_diagramlist.csv  TW3_questlist.csv
output/: alchemy_total.txt  crafting_total.txt  log.txt  quest_total.txt
save-helper/W3SavegameEditor.Core/ChunkedLz4/: Lz4Chunk.cs
save-helper/W3SavegameEditor.Core/Savegame/VariableParsers/: PorpVariableParser.cs
save-helper/WitcherSaveTracker/: Program.cs  WitcherSaveTracker.csproj  tw3trackerinfo.json
save-helper/data/: ManualSave.sav
save-helper/scripts/: convert-quests.py  ffi-example.py
src/: main.py
witcher-save/: Cargo.toml  QuickSave.sav
witcher-save-cs/: Program.cs  build-command.txt  ffi-example.py  quest-tracker.py  quests.csv  quests.json  witcher-save-cs.csproj
witcher-save-cs/WitcherSaveTracker/: Program.cs  WitcherSaveTracker.csproj
witcher-save/src/: lib.rs  main.rs
witcher-track/: .gitignore  Cargo.toml  LINKS.md  README.md  build.rs  make_ground_truth.py  rustfmt.toml  tw3hundo.db  witcher.traineddata
witcher-track/data/: map-pin-tags.txt  quest-guids.txt  tw3defaultdiagramlist.txt  tw3defaultformulaelist.txt  tw3diagramlist.txt  tw3formulaelist.txt  tw3questlist.txt
witcher-track/src/: data.rs  db.rs  lib.rs  main.rs  picture.rs  savefile.rs  screenshot.rs
witcher-track/tests/: PreprocessTests.ipynb  tosqlite.py
