[package]
name = "witcher-track"
version = "0.1.0"
edition = "2021"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "9d47b24"

[package.metadata.vcpkg.target.'x86_64-pc-windows-msvc']
triplet = "x64-windows-static-md"
dependencies = ["leptonica", "tesseract"]

[dependencies]
anyhow = "1.0.72"
itertools = "0.11.0"
lazy_static = "1.4.0"
leptonica-sys = "0.4.5"
rusqlite = { version = "0.29.0", features = ["bundled-full"] }
screenshots = "0.7.0"
strsim = "0.10.0"
tesseract-sys = "0.6.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
ureq = "2.7.1"
windows = { version = "0.48.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
