[package]
name = "witcher-track"
version = "0.1.0"
edition = "2021"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "08f00b4"

[package.metadata.vcpkg.target.'aarch64-apple-darwin']
triplet = "arm64-osx-release"
dependencies = ["leptonica", "tesseract"]

[package.metadata.vcpkg.target.'x86_64-pc-windows-msvc']
triplet = "x64-windows-static"
dependencies = ["leptonica", "tesseract"]

[dependencies]
anyhow = "1.0.72"
itertools = "0.11.0"
lazy_static = "1.4.0"
leptonica-sys = "0.4.5"
rusqlite = { version = "0.29.0", features = ["bundled-full"] }
screenshots = "0.7.0"
strsim = "0.10.0"
tesseract-sys = "0.6.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
windows = { version = "0.48.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[build-dependencies]
ureq = "2.7.1"
